New colors and other stuff

--- a/gi-pro-mobile/www/templates/history.html
+++ b/gi-pro-mobile/www/templates/history.html
@@ -3,7 +3,7 @@
 		<!--<button class="button button-icon button-clear" ng-click=""></button>-->
 	</ion-nav-buttons>
 
-	<ion-tabs class="tabs-royal">
+	<ion-tabs class="tabs-calm">
 		<ion-tab title="{{'home_tab_1' | translate}}">
 			<ion-pane>
 				<ion-content scroll="false">
