--- a/gi-pro-mobile/www/templates/search.html
+++ b/gi-pro-mobile/www/templates/search.html
@@ -35,14 +35,14 @@
 			</div>
 		</div>
 
-		<!--<button class="button button-block button-royal" ng-click="openPoisModal()">Apri POIs Modal</button>-->
-		<!--<button class="button button-block button-royal" ng-click="openDatePicker()">Apri DatePicker</button>-->
-		<!--<button class="button button-block button-royal" ng-click="openTimePicker()">Apri TimePicker</button>-->
-		<!--<button class="button button-block button-royal" ng-click="goTo('app.home')">app.home</button>-->
+		<!--<button class="button button-block button-calm" ng-click="openPoisModal()">Apri POIs Modal</button>-->
+		<!--<button class="button button-block button-calm" ng-click="openDatePicker()">Apri DatePicker</button>-->
+		<!--<button class="button button-block button-calm" ng-click="openTimePicker()">Apri TimePicker</button>-->
+		<!--<button class="button button-block button-calm" ng-click="goTo('app.home')">app.home</button>-->
 	</ion-content>
 
 	<ion-footer-bar>
-		<button class="button button-calm button-block" ng-disabled="!searchOffer.poi || !searchOffer.date || !searchOffer.time" ng-click="searchOffers()">
+		<button class="button button-energized button-block" ng-disabled="!searchOffer.poi || !searchOffer.date || !searchOffer.time" ng-click="searchOffers()">
 			{{'search' | translate}}
 		</button>
 	</ion-footer-bar>
