--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -16,13 +16,18 @@ $dark:                            #444 !default;
 */
 
 // Custom colors
-$t_blue: #4e7499;
-$t_darkwine: #652648;
-$t_wine: #8a567a;
-$t_lightwine: #b99aaf;
+$t_darkblue: #652648;
+$t_blue: #8a567a;
+$t_lightblue: #b99aaf;
+$t_blue: #1f6ca5;
+$t_darkblue: #10406f;
+$t_lightblue: #1bafe6;
+$t_orange: #d75719;
+$t_red: #d7193a;
 // Ionic overrides
-$royal: $t_wine !default;
-$calm: $t_blue !default;
+$calm: $t_darkblue !default;
+$energized: $t_orange !default;
+$assertive: $t_red !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
@@ -32,40 +37,40 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 .toga-app .ionic_datepicker_popup {
 	.today {
-		border: 1px solid $t_wine;
+		border: 1px solid $t_blue;
 		/*border-radius: 50%;*/
 	}
 	.selected_date {
-		background-color: $t_wine;
+		background-color: $t_blue;
 		/*border-radius: 50%;*/
 		color: #ffffff;
 		/*font-weight: bold;*/
 	}
 	.popup-head {
-		background-color: $t_wine;
+		background-color: $t_blue;
 		/*display: none;*/
 	}
 	.popup-body {
 		.selected_date_full {
-			background-color: $t_wine;
+			background-color: $t_blue;
 		}
 		.month_select,
 		.year_select {
 			/*border: none;*/
-			border-bottom: 1px solid $t_wine;
+			border-bottom: 1px solid $t_blue;
 			/*padding: 0;*/
 		}
 		.month_select:after,
 		.year_select:after {
 			/*right: 5px;*/
-			color: $t_wine;
+			color: $t_blue;
 		}
 		.button-clear {
-			color: $t_wine;
+			color: $t_blue;
 		}
 	}
 	.popup-buttons button {
-		background-color: $t_blue;
+		background-color: $t_orange;
 		/*border-radius: 0;
 		margin-right: 1px;*/
 		color: #ffffff;
@@ -74,44 +79,44 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 .toga-app .ionic_datepicker_modal {
 	.header,
 	.footer {
-		background-color: $t_wine;
+		background-color: $t_blue;
 		.title,
 		.button {
 			color: #ffffff;
 		}
 	}
 	.today {
-		border: 1px solid $t_wine;
+		border: 1px solid $t_blue;
 	}
 	.selected_date {
-		background-color: $t_wine;
+		background-color: $t_blue;
 		color: #fff;
 		/*font-weight: bold;*/
 	}
 	.button-clear {
-		color: $t_wine;
+		color: $t_blue;
 	}
 	.month_select,
 	.year_select {
 		/*border: none;*/
-		border-bottom: 1px solid $t_wine;
+		border-bottom: 1px solid $t_blue;
 		/*padding: 0;*/
 	}
 	.month_select:after,
 	.year_select:after {
 		/*right: 5px;*/
-		color: $t_wine;
+		color: $t_blue;
 	}
 }
 .toga-app .ionic_timepicker_popup {
 	.popup-body {
 		.heading {
-			background-color: $t_wine;
+			background-color: $t_blue;
 		}
 	}
 	.popup-buttons {
 		.button {
-			background-color: $t_blue;
+			background-color: $t_orange;
 		}
 	}
 }
@@ -177,24 +182,26 @@ input[readonly] {
 /* Menu */
 
 .menu {
-	background-color: $t_darkwine;
+	background-color: $t_blue;
 	.list {
 		.item {
 			color: white;
 			border-color: transparent;
-			background-color: $t_darkwine;
+			background-color: $t_blue;
 		}
 		.item.item-complex .item-content {
 			background-color: transparent;
 		}
 		.item.active {
-			background-color: $t_wine;
+			background-color: $t_darkblue;
 		}
 	}
 }
 
 /* Tabs */
-
+.tabs {
+	/*box-shadow: 0px 4px 10px 0px gray;*/
+}
 .tab-item {
 	/*opacity: 1;*/
 	text-transform: uppercase;
@@ -203,22 +210,26 @@ input[readonly] {
 .tab-item.tab-item-active,
 .tab-item.active,
 .tab-item.activated {
-	color: $t_darkwine !important;
-	/*color: $t_lightwine !important;*/
+	/*color: $t_lightblue !important;*/
+	color: white !important;
 }
 .tabs-striped .tabs {
-	border-color: transparent;
+	/*border-color: transparent;*/
+
+	border-color: $t_darkblue;
 }
 .tabs-top.tabs-striped .tab-item {
 	max-width: none;
+	margin-top: 0px;
 	color: white;
 }
 .tabs-top.tabs-striped .tab-item.tab-item-active,
 .tabs-top.tabs-striped .tab-item.active,
 .tabs-top.tabs-striped .tab-item.activated {
+	margin-top: 0px;
 	border-width: 0px 0px 3px 0px !important;
-	border-color: $t_darkwine;
-	/*border-color: $t_lightwine;*/
+	/*border-color: $t_lightblue;*/
+	border-color: white;
 }
 
 /*
@@ -265,7 +276,7 @@ input[readonly] {
 	a:hover,
 	a:active,
 	a:visited {
-		color: $t_blue;
+		color: $t_orange;
 	}
 	.datetime {
 		padding: 10px 0;
@@ -279,7 +290,7 @@ input[readonly] {
 	.professional {
 		margin-bottom: 10px;
 		padding-bottom: 20px;
-		border-bottom: 2px solid $t_wine;
+		border-bottom: 2px solid $t_blue;
 		.item {
 			margin-bottom: 20px;
 			border: none;
@@ -518,7 +529,7 @@ input[readonly] {
 	padding-top: 20px;
 	span {
 		font-weight: bold;
-		color: $t_darkwine;
+		color: $t_darkblue;
 	}
 }
 
@@ -532,19 +543,19 @@ input[readonly] {
 	}
 	.credits_title {
 		text-align: center;
-		color: $t_darkwine;
+		color: $t_darkblue;
 		font-size: 24px;
 		font-weight: bold;
 		margin-top: 20px;
 		margin-bottom: 10px;
 	}
 	.bg-image {
-		background-color: $t_lightwine;
+		background-color: $t_lightblue;
 	}
 	.credits_subtitle {
 		margin-top: 20px !important;
 		text-align: center;
-		color: $t_darkwine;
+		color: $t_darkblue;
 		font-size: 18px;
 		font-weight: bold;
 	}
@@ -559,7 +570,7 @@ input[readonly] {
 		margin-bottom: 20px;
 	}
 	.credits_row.version {
-		color: $t_wine;
+		color: $t_blue;
 		text-transform: uppercase;
 	}
 	.credits_row.version .col {
