--- a/gi-pro-mobile/www/templates/offer.html
+++ b/gi-pro-mobile/www/templates/offer.html
@@ -23,12 +23,12 @@
 		<!--
 		<div class="row" ng-if="!isMine()">
 			<div class="col col-50">
-				<a class="button button-block button-royal button-outline icon-left ion-android-call" ng-href="tel:{{offer.professional.phone}}">
+				<a class="button button-block button-calm button-outline icon-left ion-android-call" ng-href="tel:{{offer.professional.phone}}">
 					{{'call' | translate}}
 				</a>
 			</div>
 			<div class="col col-50">
-				<a class="button button-block button-royal button-outline icon-left ion-email" ng-href="mailto:{{offer.professional.mail}}">
+				<a class="button button-block button-calm button-outline icon-left ion-email" ng-href="mailto:{{offer.professional.mail}}">
 					{{'email' | translate}}
 				</a>
 			</div>
@@ -74,10 +74,10 @@
 		</button>
 		<div class="row" ng-if="!isMine()">
 			<div class="col col-50">
-				<button class="button button-block button-royal button-outline icon-left ion-android-call">{{'call' | translate}}</button>
+				<button class="button button-block button-calm button-outline icon-left ion-android-call">{{'call' | translate}}</button>
 			</div>
 			<div class="col col-50">
-				<button class="button button-block button-royal button-outline icon-left ion-email">{{'email' | translate}}</button>
+				<button class="button button-block button-calm button-outline icon-left ion-email">{{'email' | translate}}</button>
 			</div>
 		</div>
 	</ion-footer-bar>
