--- a/gi-pro-mobile/www/templates/login.html
+++ b/gi-pro-mobile/www/templates/login.html
@@ -3,7 +3,7 @@
 		<h4 class="title">{{'app' | translate}}</h4>
 
 		<div class="list list-inset">
-			<label class="item item-input">
+			<label class="item item-input item-input-cf">
 				<input type="text" ng-maxlength="16" ng-model="user.cf" placeholder="{{'cf' | translate}}">
 			</label>
 			<label class="item item-input">
