--- a/gi-pro-mobile/www/templates/registration.html
+++ b/gi-pro-mobile/www/templates/registration.html
@@ -4,7 +4,7 @@
 		<h5>{{'register_new_account' | translate}}</h5>
 
 		<div class="list list-inset">
-			<label class="item item-input">
+			<label class="item item-input item-input-cf">
 				<input type="text" maxlength="16" ng-maxlength="16" ng-model="registration.cf" placeholder="{{'cf' | translate}}">
 			</label>
 			<label class="item item-input">
