tutorial, profile edit.

--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -41,6 +41,9 @@
 				<ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" href="{{problemLink()}}">
 					<i class="icon ion-paper-airplane"></i> {{'problem' | translate}}
 				</ion-item>
+				<ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" ng-click="helpLink()">
+					<i class="icon ion-help-circled"></i> {{'tutorial' | translate}}
+				</ion-item>
 				<ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.credits">
 					<i class="icon ion-information-circled"></i> {{'credits' | translate}}
 				</ion-item>
