--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -518,6 +518,11 @@ input[readonly] {
 		.edit {
 			color: $calm;
 		}
+        input {
+          display: inline;
+          border-bottom: 1px solid #000;
+          height: inherit;
+        }
 	}
 	.name {
 		font-size: 20px;
