--- a/gi-pro-mobile/www/templates/notifications.html
+++ b/gi-pro-mobile/www/templates/notifications.html
@@ -9,7 +9,7 @@
 		<h4 class="padding" ng-if="!!notifications && notifications.length == 0">{{'notifications_empty' | translate}}</h4>
 
 		<ion-list>
-			<ion-item class="item-text-wrap" ng-click="openNotificationDetails(notification)" ng-repeat="notification in notifications" ng-if="!!notifications && notifications.length > 0">
+			<ion-item class="item-text-wrap notification" ng-class="{'unread': !notification.read}" ng-repeat="notification in notifications" ng-click="openNotificationDetails(notification)" ng-if="!!notifications && notifications.length > 0">
 				<h2>{{notification.type | translate}}</h2>
 				<h3>{{notification.text}}</h3>
 				<ion-option-button class="button-assertive" ng-click="deleteNotification(notification, $index)"><i class="icon ion-trash-a"></i></ion-option-button>
