--- a/gi-pro-mobile/www/templates/tutorial.html
+++ b/gi-pro-mobile/www/templates/tutorial.html
@@ -6,14 +6,45 @@
 			</div>
 		</div>
 		<ion-slides options="options" slider="data.slider">
-			<ion-slide-page>
-				<img src="http://placekitten.com/150/300" />
+			<ion-slide-page class="padding">
+				<div class="description">{{'tutorial_offers' | translate}}</div>
+				<div class="row row-center">
+					<div class="col col-80 col-offset-10">
+						<img src="img/tutorial/offers.png" />
+					</div>
+				</div>
 			</ion-slide-page>
-			<ion-slide-page>
-				<img src="http://placekitten.com/250/300" />
+			<ion-slide-page class="padding">
+				<div class="description">{{'tutorial_search' | translate}}</div>
+				<div class="row row-center">
+					<div class="col col-80 col-offset-10">
+						<img src="img/tutorial/search.png" />
+					</div>
+				</div>
 			</ion-slide-page>
-			<ion-slide-page>
-				<img src="http://placekitten.com/200/250" />
+			<ion-slide-page class="padding">
+				<div class="description">{{'tutorial_requests' | translate}}</div>
+				<div class="row row-center">
+					<div class="col col-80 col-offset-10">
+						<img src="img/tutorial/requests.png" />
+					</div>
+				</div>
+			</ion-slide-page>
+			<ion-slide-page class="padding">
+				<div class="description">{{'tutorial_details' | translate}}</div>
+				<div class="row row-center">
+					<div class="col col-80 col-offset-10">
+						<img src="img/tutorial/details.png" />
+					</div>
+				</div>
+			</ion-slide-page>
+			<ion-slide-page class="padding">
+				<div class="description">{{'tutorial_functions' | translate}}</div>
+				<div class="row row-center">
+					<div class="col col-80 col-offset-10">
+						<img src="img/tutorial/functions.png" />
+					</div>
+				</div>
 			</ion-slide-page>
 		</ion-slides>
 		<div class="row row-center tutorial-footer">
