--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -38,6 +38,7 @@
 				<ion-item nav-clear menu-close class="item item-icon-left" ng-if="!!user" ng-click="logout()">
 					<i class="icon ion-log-out"></i> {{'logout' | translate}}
 				</ion-item>
+				<div class="padding-vertical"></div>
 				<ion-item nav-clear menu-close class="item item-icon-left" ui-sref-active="active" href="{{problemLink()}}">
 					<i class="icon ion-paper-airplane"></i> {{'problem' | translate}}
 				</ion-item>
