--- a/gi-pro-mobile/www/templates/profile.html
+++ b/gi-pro-mobile/www/templates/profile.html
@@ -13,7 +13,7 @@
                 <div class="upload"><i class="icon ion-camera"></i></div>
               </div>
               <div class="profile-image" ng-if="!!profile.imageUrl">
-                <img ng-src="{{generateImageUrl(profile.imageUrl)}}">
+                <img ng-src="{{imageUrl}}">
               </div>
             </div>
           </div>
