--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -9986,40 +9986,41 @@ input[readonly] {
  */
 .tutorial {
   background-color: #10406f; }
-
-.tutorial .title {
-  height: 10%;
-  color: white;
-  text-transform: uppercase;
-  text-align: center;
-  font-size: larger; }
-
-.tutorial ion-slides {
-  height: 70%; }
-
-.tutorial ion-slides img {
-  border: 2px solid white; }
-
-.tutorial ion-slides .description {
-  color: white;
-  font-size: 16px; }
-
-.tutorial ion-slides .swiper-slide {
-  text-align: center; }
-
-.tutorial ion-slides .swiper-pagination .swiper-pagination-bullet {
-  width: 14px;
-  height: 14px;
-  border: 1px solid white;
-  background: transparent;
-  opacity: 1; }
-
-.tutorial ion-slides .swiper-pagination .swiper-pagination-bullet-active {
-  background: white; }
-
-.tutorial .tutorial-footer {
-  height: 20%;
-  background-color: #10406f; }
+  .tutorial .title {
+    height: 10%;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: larger; }
+  .tutorial ion-slides {
+    height: 70%; }
+    .tutorial ion-slides img {
+      border: 2px solid white; }
+    .tutorial ion-slides .swiper-slide {
+      text-align: center; }
+    .tutorial ion-slides .swiper-pagination .swiper-pagination-bullet {
+      width: 14px;
+      height: 14px;
+      border: 1px solid white;
+      background: transparent;
+      opacity: 1; }
+    .tutorial ion-slides .swiper-pagination .swiper-pagination-bullet-active {
+      background: white; }
+  .tutorial .tutorial-footer {
+    height: 20%;
+    background-color: #10406f; }
+  .tutorial .tutorial-content {
+    color: #fff;
+    max-height: 80%;
+    height: 80%;
+    display: block; }
+    .tutorial .tutorial-content div {
+      padding: 0 20px;
+      min-height: 20%; }
+    .tutorial .tutorial-content img {
+      margin-top: 20px;
+      border: 1px solid white;
+      max-width: 60%; }
 
 /*
  * HOME
@@ -10219,7 +10220,7 @@ input[readonly] {
   .profile .profile-image-container .profile-image-placeholder {
     display: block;
     border-radius: 8px;
-    height: 100%;
+    height: 100px;
     background-color: #f8f8f8;
     position: relative; }
     .profile .profile-image-container .profile-image-placeholder .upload {
