--- a/gi-pro-mobile/www/templates/profile.html
+++ b/gi-pro-mobile/www/templates/profile.html
@@ -19,7 +19,7 @@
           </div>
           <div class="col col-66">
             <ul>
-                <li class="name">{{profile.name}} {{profile.surname}}</li>
+                <li class="name">{{profile.surname}} {{profile.name}}</li>
                 <li class="type">{{profile.type}}</li>
             </ul>
           </div>
@@ -61,7 +61,7 @@
 
       <div class="padding">
         <div class="name">
-          {{profile.name}} {{profile.surname}}
+          {{profile.surname}} {{profile.name}}
         </div>
         <div class="title">
           {{profile.type}}
