--- a/gi-pro-mobile/www/templates/searchresults.html
+++ b/gi-pro-mobile/www/templates/searchresults.html
@@ -13,7 +13,7 @@
 			<div class="card" ng-repeat="offer in offers" ng-click="openOfferDetails(offer)">
 				<div class="item item-thumbnail-left">
 					<img ng-src="{{generateImageUrl(offer.professional.imageUrl)}}" />
-					<h2>{{offer.professional.name}} {{offer.professional.surname}}</h2>
+					<h2>{{offer.professional.surname}} {{offer.professional.name}}</h2>
 					<!--<p>{{offer.professional.type}}</p>-->
 					<ul>
 						<li class="phone"><i class="icon ion-android-call"></i>{{offer.professional.phone}}</li>
