--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -9816,78 +9816,78 @@ a.button {
   transition-duration: 0s; }
 
 /* IonicDatePicker, IonicTimePicker */
-.toga-app .ionic_datepicker_popup .today {
+.gi-pro .ionic_datepicker_popup .today {
   border: 1px solid #1f6ca5;
   /*border-radius: 50%;*/ }
 
-.toga-app .ionic_datepicker_popup .selected_date {
+.gi-pro .ionic_datepicker_popup .selected_date {
   background-color: #1f6ca5;
   /*border-radius: 50%;*/
   color: #ffffff;
   /*font-weight: bold;*/ }
 
-.toga-app .ionic_datepicker_popup .popup-head {
+.gi-pro .ionic_datepicker_popup .popup-head {
   background-color: #1f6ca5;
   /*display: none;*/ }
 
-.toga-app .ionic_datepicker_popup .popup-body .selected_date_full {
+.gi-pro .ionic_datepicker_popup .popup-body .selected_date_full {
   background-color: #1f6ca5; }
 
-.toga-app .ionic_datepicker_popup .popup-body .month_select,
-.toga-app .ionic_datepicker_popup .popup-body .year_select {
+.gi-pro .ionic_datepicker_popup .popup-body .month_select,
+.gi-pro .ionic_datepicker_popup .popup-body .year_select {
   /*border: none;*/
   border-bottom: 1px solid #1f6ca5;
   /*padding: 0;*/ }
 
-.toga-app .ionic_datepicker_popup .popup-body .month_select:after,
-.toga-app .ionic_datepicker_popup .popup-body .year_select:after {
+.gi-pro .ionic_datepicker_popup .popup-body .month_select:after,
+.gi-pro .ionic_datepicker_popup .popup-body .year_select:after {
   /*right: 5px;*/
   color: #1f6ca5; }
 
-.toga-app .ionic_datepicker_popup .popup-body .button-clear {
+.gi-pro .ionic_datepicker_popup .popup-body .button-clear {
   color: #1f6ca5; }
 
-.toga-app .ionic_datepicker_popup .popup-buttons button {
+.gi-pro .ionic_datepicker_popup .popup-buttons button {
   background-color: #d75719;
   /*border-radius: 0;
 		margin-right: 1px;*/
   color: #ffffff; }
 
-.toga-app .ionic_datepicker_modal .header,
-.toga-app .ionic_datepicker_modal .footer {
+.gi-pro .ionic_datepicker_modal .header,
+.gi-pro .ionic_datepicker_modal .footer {
   background-color: #1f6ca5; }
-  .toga-app .ionic_datepicker_modal .header .title,
-  .toga-app .ionic_datepicker_modal .header .button,
-  .toga-app .ionic_datepicker_modal .footer .title,
-  .toga-app .ionic_datepicker_modal .footer .button {
+  .gi-pro .ionic_datepicker_modal .header .title,
+  .gi-pro .ionic_datepicker_modal .header .button,
+  .gi-pro .ionic_datepicker_modal .footer .title,
+  .gi-pro .ionic_datepicker_modal .footer .button {
     color: #ffffff; }
 
-.toga-app .ionic_datepicker_modal .today {
+.gi-pro .ionic_datepicker_modal .today {
   border: 1px solid #1f6ca5; }
 
-.toga-app .ionic_datepicker_modal .selected_date {
+.gi-pro .ionic_datepicker_modal .selected_date {
   background-color: #1f6ca5;
   color: #fff;
   /*font-weight: bold;*/ }
 
-.toga-app .ionic_datepicker_modal .button-clear {
+.gi-pro .ionic_datepicker_modal .button-clear {
   color: #1f6ca5; }
 
-.toga-app .ionic_datepicker_modal .month_select,
-.toga-app .ionic_datepicker_modal .year_select {
+.gi-pro .ionic_datepicker_modal .month_select,
+.gi-pro .ionic_datepicker_modal .year_select {
   /*border: none;*/
   border-bottom: 1px solid #1f6ca5;
   /*padding: 0;*/ }
 
-.toga-app .ionic_datepicker_modal .month_select:after,
-.toga-app .ionic_datepicker_modal .year_select:after {
+.gi-pro .ionic_datepicker_modal .month_select:after,
+.gi-pro .ionic_datepicker_modal .year_select:after {
   /*right: 5px;*/
   color: #1f6ca5; }
 
-.toga-app .ionic_timepicker_popup .popup-body .heading {
+.gi-pro .ionic_timepicker_popup .popup-body .heading {
   background-color: #1f6ca5; }
 
-.toga-app .ionic_timepicker_popup .popup-buttons .button {
+.gi-pro .ionic_timepicker_popup .popup-buttons .button {
   background-color: #d75719; }
 
 /* Buttons */
@@ -10045,6 +10045,29 @@ input[readonly] {
   bottom: 10px;
   right: 10px; }
   .home .card .badge .icon {
+    margin-right: 4px;
+    font-size: 16px; }
+
+.serviceandprofessionist .scroll-view {
+  height: 100%; }
+
+.serviceandprofessionist .card .item {
+  padding: 10px; }
+  .serviceandprofessionist .card .item h2 {
+    margin-bottom: 5px; }
+  .serviceandprofessionist .card .item h3 {
+    margin: auto; }
+
+.serviceandprofessionist .card .icon {
+  margin-right: 7px;
+  font-size: 20px; }
+
+.serviceandprofessionist .card .badge {
+  top: auto;
+  position: absolute;
+  bottom: 10px;
+  right: 10px; }
+  .serviceandprofessionist .card .badge .icon {
     margin-right: 4px;
     font-size: 16px; }
 
